fix(inputgrouplabel): fix label color in contrast
affects: @entur/form

--- a/packages/form/src/InputGroupLabel.scss
+++ b/packages/form/src/InputGroupLabel.scss
@@ -42,7 +42,7 @@ $label-top-large: 0.5rem;
       }
     }
     .eds-contrast & {
-      color: $colors-blues-blue40;
+      color: $colors-blues-blue50;
     }
     .eds-form-control-wrapper--dark & {
       .eds-contrast & {
